--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
   height: 100vh;
 
   --color-link: #305090;
+  --color-link-light: #40c0f0;
   --color-link-hover: #f08040;
   --color-line: #404040;
   --color-light: #e0e0e0;
@@ -28,6 +29,13 @@ code {
 .dark {
   background-color: var(--color-dark);
   color: var(--color-light);
+}
+.dark button {
+  background-color: var(--color-dark);
+  color: var(--color-light);
+}
+.dark a {
+  color: var(--color-link-light);
 }
 .container {
   display: flex;
@@ -45,7 +53,16 @@ a {
 a:hover {
   color: var(--color-link-hover);
 }
-
+button {
+  cursor: pointer;
+  padding: 5px;
+  font-size: 16px;
+  border: 1px solid var(--color-line);
+  border-radius: 5px;
+}
+button:hover {
+  border: 1px solid var(--color-link-hover);
+}
 .header {
   padding: 10px;
   min-height: 50px;
