--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,6 +13,14 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+li {
+  margin-top: 10px;
 }
 
 #root {
@@ -78,4 +89,17 @@ button:hover {
   justify-content: center;
   align-items: center;
   border-top: 1px solid var(--color-line); 
+}
+.blog {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+}
+.content {
+  flex: 1 75%;
+  padding: 10px;
+}
+.sidebar {
+  flex: 1 25%;
+  padding: 10px;
 }
